<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProximityControl</string>
    <string name="action_settings">Settings</string>
	<string name="led_entry">LED light On/Off</string>
    <string name="change_orientation_entry">Change Screen Orientation</string>
    <string name="actions_title">Actions</string>
    <string name="actions_summary">Choose proximity actions.</string>
    <string name="screen_on_title">When screen is ON</string>
    <string name="screen_off_title">When screen is OFF</string>
    <string name="two_preference_summary">Wave your hand or finger TWO times closely in front of the proximity sensor, to perform the selected action.</string>
    <string name="two_preference_title">2 Waves</string>
    <string name="three_preference_summary">Wave your hand or finger THREE times closely in front of the proximity sensor, to perform the selected action.</string>
    <string name="three_preference_title">3 Waves</string>
    <string name="four_preference_dialog_title">Four Waves:</string>
    <string name="four_preference_summary">Wave your hand or finger FOUR times closely in front of the proximity sensor, to perform the selected action.</string>
    <string name="four_preference_title">4 Waves</string>
    <string name="wake_app_title">Launch App</string>
    <string name="wake_app_summary">Launch an app after unlock?</string>
    <string name="options_title">Options</string>
    <string name="feedback">Feedback</string>
    <string name="gestures">Gestures</string>
    <string name="service">Service</string>
    <string name="settings_title">Settings</string>
    <string name="wave_settings_title">Wave Settings</string>
    <string name="hold_settings_title">Hold Settings</string>
    <string name="settings_summary">Customize the actions.</string>
    <string name="service_preference_title">Start/Stop Service</string>
    <string name="sensor_testing">Sensor Testing</string>
    <string name="sensor_testing_title">Testing</string>
    <string name="sensor_testing_summary">Test the proximity sensor.</string>
    <string name="foreground_preference_summary">Prevents the system from killing the service, but adds a permanent status bar notification.</string>
    <string name="service_preference_summary">Start or Stop the service</string>
    <string name="wave_duration_preference_summary">How fast should you have to wave your hand or finger closely in front of the proximity sensor to trigger the respective Wave action.</string>
    <string name="wave_duration_preference_title">Max wave time</string>
    <string name="time_between_waves_title">Max wave timeout</string>
    <string name="time_between_waves_summary">Maximum time between two waves (in order for them to be linked into the same gesture).</string>
    <string name="feedback_preference_title">Tactile feedback</string>
    <string name="feedback_preference_summary">Whether the device should slightly vibrate upon registered gesture.</string>
    <string name="sound_feedback_preference_title">Sound feedback</string>
    <string name="sound_feedback_preference_summary">Whether you should hear a short sound upon registered gesture.</string>
    <string name="proximity_preference_title">Proximity:</string>
    <string name="prox_far">FAR</string>
    <string name="prox_close">CLOSE</string>
    <string name="wavetime_preference_title">Wave duration:</string>
    <string name="wavetimeout_preference_title">Time between waves:</string>
    <string name="success">SUCCESS!</string>
    <string name="waveTesting_preference_title">Waves</string>
    <string name="wave_too_fast">PA: Wave is too fast!</string>
    <string name="wave_title">Wave</string>
    <string name="wave_summary">Configure \"Wave\" actions.</string>
    <string name="hold_title">Hold</string>
    <string name="hold_summary">Configure \"Hold\" actions.</string>
    <string name="howtouse_title">How To Use</string>
    <string name="howtouse_summary">Learn how to use the application</string>
    <string name="one_preference_summary">Wave your hand or finger ONCE closely in front of the proximity sensor, to perform the selected action.</string>
    <string name="one_preference_title">1 Wave</string>
    <string name="wave_min_duration_preference_summary">The minimum duration of a Wave - this is to prevent accidental triggering.</string>
    <string name="wave_min_duration_preference_title">Min wave time</string>
    <string name="hold1_preference_summary">Block the proximity sensor and quickly release it after the selected first hold time, to perform the selected action.</string>
    <string name="hold1_preference_title">Hold 1</string>
    <string name="hold2_preference_summary">Block the proximity sensor and quickly release it after the selected second hold time, to perform the selected action.</string>
    <string name="hold2_preference_title">Hold 2</string>
    <string name="hold3_preference_summary">Block the proximity sensor and quickly release it after the selected third hold time, to perform the selected action.</string>
    <string name="hold3_preference_title">Hold 3</string>
    <string name="hold4_preference_summary">Block the proximity sensor and quickly release it after the selected forth hold time, to perform the selected action.</string>
    <string name="hold4_preference_title">Hold 4</string>
    <string name="first_hold_summary">The time which you have to block the proximity sensor to trigger the first \"Hold\" action.</string>
    <string name="first_hold_title">First Hold</string>
    <string name="next_hold_summary">The time which you have to block the proximity sensor to trigger each subsequent \"Hold\" action.</string>
    <string name="next_hold_title">Next Hold</string>
    <string name="devadmin_preference_title">Device Administrator</string>
    <string name="devadmin_preference_summary">WARNING: You have to disable this if you want to uninstall the app!</string>
    <string name="speakermode">Loud Speaker Settings</string>
    <string name="speaker_preference_title">Loud Speaker</string>
    <string name="speaker_preference_summary">Whether the device should be turned on with loudspeaker mode when you accept call upon registered gesture.</string>

    
</resources>
