<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/screen_on_title">
        <ListPreference android:entries="@array/action_preference" android:title="@string/hold1_preference_title" android:key="hold1" android:summary="@string/hold1_preference_summary" android:defaultValue="off" android:dialogTitle="@string/hold1_preference_title" android:entryValues="@array/action_preference_values" />
        <ListPreference android:entries="@array/action_preference" android:title="@string/hold2_preference_title" android:key="hold2" android:summary="@string/hold2_preference_summary" android:defaultValue="off" android:dialogTitle="@string/hold2_preference_title" android:entryValues="@array/action_preference_values" />
        <ListPreference android:entries="@array/action_preference" android:title="@string/hold3_preference_title" android:key="hold3" android:summary="@string/hold3_preference_summary" android:defaultValue="off" android:dialogTitle="@string/hold3_preference_title" android:entryValues="@array/action_preference_values" />
        <ListPreference android:entries="@array/action_preference" android:title="@string/hold4_preference_title" android:key="hold4" android:summary="@string/hold4_preference_summary" android:defaultValue="off" android:dialogTitle="@string/hold4_preference_title" android:entryValues="@array/action_preference_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/screen_off_title">
        <ListPreference android:entries="@array/action_preference_2" android:title="@string/hold1_preference_title" android:key="hold1_2" android:summary="@string/hold1_preference_summary" android:defaultValue="off" android:dialogTitle="@string/hold1_preference_title" android:entryValues="@array/action_preference_values_2" />
        <ListPreference android:entries="@array/action_preference_2" android:title="@string/hold2_preference_title" android:key="hold2_2" android:summary="@string/hold2_preference_summary" android:defaultValue="off" android:dialogTitle="@string/hold2_preference_title" android:entryValues="@array/action_preference_values_2" />
        <ListPreference android:entries="@array/action_preference_2" android:title="@string/hold3_preference_title" android:key="hold3_2" android:summary="@string/hold3_preference_summary" android:defaultValue="off" android:dialogTitle="@string/hold3_preference_title" android:entryValues="@array/action_preference_values_2" />
        <ListPreference android:entries="@array/action_preference_2" android:title="@string/hold4_preference_title" android:key="hold4_2" android:summary="@string/hold4_preference_summary" android:defaultValue="off" android:dialogTitle="@string/hold4_preference_title" android:entryValues="@array/action_preference_values_2" />
    </PreferenceCategory>
</PreferenceScreen>
